--- a/app/src/main/res/layout/activity_cavalier_add_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_cours.xml
@@ -1,180 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/layout_filter">
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/layout_filter">
 
 
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:id="@+id/tableLayout">
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:id="@+id/tableLayout">
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Date"
-                android:textSize="20sp"
-                android:id="@+id/textViewDate"
-                android:layout_column="0"
-                />
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Date"
+                    android:textSize="20sp"
+                    android:id="@+id/textViewDate"
+                    android:layout_column="0"
+                    />
 
-            <ImageButton
-                android:id="@+id/selectDate"
-                android:layout_width="96dp"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_centerVertical="true"
-                android:contentDescription="Date"
-                android:background="#00000000"
-                android:src="@drawable/calendrier" />
-        </TableRow>
+                <ImageButton
+                    android:id="@+id/selectDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:contentDescription="Date"
+                    android:background="#00000000"
+                    android:src="@drawable/calendrier" />
+            </TableRow>
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Monture"
-                android:textSize="20sp"
-                android:id="@+id/textView1"
-                android:layout_column="0"
-                />
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Monture"
+                    android:textSize="20sp"
+                    android:id="@+id/textView1"
+                    android:layout_column="0"
+                    />
 
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spMonture"
-                android:spinnerMode="dialog"
-                android:textSize="20sp"
-                android:layout_column="1"
-                android:layout_centerVertical="true"/>
-        </TableRow>
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spMonture"
+                    android:spinnerMode="dialog"
+                    android:textSize="20sp"
+                    android:layout_column="1"
+                    android:layout_centerVertical="true"/>
+            </TableRow>
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Cavalier"
-                android:textSize="20sp"
-                android:id="@+id/textView4"
-                android:layout_column="0"
-                />
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Cavalier"
+                    android:textSize="20sp"
+                    android:id="@+id/textView4"
+                    android:layout_column="0"
+                    />
 
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spCavalier"
-                android:spinnerMode="dialog"
-                android:textSize="20sp"
-                android:layout_column="1"
-                android:layout_centerVertical="true"/>
-        </TableRow>
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spCavalier"
+                    android:spinnerMode="dialog"
+                    android:textSize="20sp"
+                    android:layout_column="1"
+                    android:layout_centerVertical="true"/>
+            </TableRow>
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Moniteur"
-                android:textSize="20sp"
-                android:id="@+id/textView6"
-                android:layout_column="0"
-                />
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Moniteur"
+                    android:textSize="20sp"
+                    android:id="@+id/textView6"
+                    android:layout_column="0"
+                    />
 
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spMoniteur"
-                android:spinnerMode="dialog"
-                android:textSize="20sp"
-                android:layout_column="1"
-                android:layout_centerVertical="true"/>
-        </TableRow>
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spMoniteur"
+                    android:spinnerMode="dialog"
+                    android:textSize="20sp"
+                    android:layout_column="1"
+                    android:layout_centerVertical="true"/>
+            </TableRow>
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Lieu"
-                android:textSize="20sp"
-                android:id="@+id/textView7"
-                android:layout_column="0"
-                />
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lieu"
+                    android:textSize="20sp"
+                    android:id="@+id/textView7"
+                    android:layout_column="0"
+                    />
 
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spLieu"
-                android:spinnerMode="dialog"
-                android:textSize="20sp"
-                android:layout_column="1"
-                android:layout_centerVertical="true"/>
-        </TableRow>
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spLieu"
+                    android:spinnerMode="dialog"
+                    android:textSize="20sp"
+                    android:layout_column="1"
+                    android:layout_centerVertical="true"/>
+            </TableRow>
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Durée (H)"
-                android:textSize="20sp"
-                android:id="@+id/textView2"
-                android:layout_column="0"
-                />
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Durée (H)"
+                    android:textSize="20sp"
+                    android:id="@+id/textView2"
+                    android:layout_column="0"
+                    />
 
-            <EditText
-                android:layout_marginTop="10dp"
-                android:id="@+id/editTextDuree"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView2"
-                android:layout_toRightOf="@+id/textView2"
-                android:ems="10"
-                android:textSize="20sp"
-                android:inputType="number"
-                android:focusableInTouchMode="false"
-                android:layout_column="1"/>
+                <EditText
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/editTextDuree"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/textView2"
+                    android:layout_toRightOf="@+id/textView2"
+                    android:ems="10"
+                    android:textSize="20sp"
+                    android:inputType="number"
+                    android:focusableInTouchMode="false"
+                    android:layout_column="1"/>
 
-        </TableRow>
+            </TableRow>
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
+        </TableLayout>
 
-            <TextView
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Observation"
-                android:textSize="20sp"
-                android:id="@+id/textView8"
-                android:layout_column="0" />
-
-        </TableRow>
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Observations"
+            android:textSize="20sp"
+            android:id="@+id/textView8"
+            android:layout_below="@+id/tableLayout"
+            android:layout_column="0" />
 
         <EditText
             android:layout_marginTop="10dp"
@@ -184,9 +185,9 @@
             android:ems="10"
             android:textSize="20sp"
             android:inputType="textMultiLine"
+            android:layout_below="@+id/textView8"
             android:lines="2" />
 
-    </TableLayout>
 
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
