--- a/app/src/main/res/layout/activity_cavalier_add_monture.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_monture.xml
@@ -1,100 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/layout_filter">
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
 
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:id="@+id/tableLayout">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/layout_filter">
 
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nom"
-                android:textSize="20sp"
-                android:id="@+id/textView2"
-                android:layout_column="0" />
-
-            <EditText
-                android:layout_marginTop="10dp"
-                android:id="@+id/editTextNom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView2"
-                android:layout_toRightOf="@+id/textView2"
-                android:ems="10"
-                android:textSize="20sp"
-                android:inputType="textCapWords" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Genre"
-                android:textSize="20sp"
-                android:id="@+id/textView3"
-                android:layout_column="0"
-                />
-
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spGenre"
-                android:spinnerMode="dialog"
-                android:textSize="20sp"
-                android:layout_column="1"
-                android:layout_centerVertical="true"/>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Robe"
-                android:textSize="20sp"
-                android:id="@+id/textView5"
-                android:layout_column="0" />
-
-            <EditText
-                android:layout_marginTop="10dp"
-                android:id="@+id/editTextRobe"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView5"
-                android:layout_toRightOf="@+id/textView5"
-                android:ems="10"
-                android:textSize="20sp"
-                android:inputType="textCapWords" />
-
-        </TableRow>
-
-    </TableLayout>
-
-    <ImageView android:id="@+id/cheval_pic"
-        android:layout_width="400px"
-        android:layout_height="400px"
-        android:layout_below="@+id/tableLayout"
-        android:layout_centerHorizontal="true"/>
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:id="@+id/tableLayout">
 
 
-</RelativeLayout>
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nom"
+                    android:textSize="20sp"
+                    android:id="@+id/textView2"
+                    android:layout_column="0" />
+
+                <EditText
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/editTextNom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/textView2"
+                    android:layout_toRightOf="@+id/textView2"
+                    android:ems="10"
+                    android:textSize="20sp"
+                    android:inputType="textCapWords" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Genre"
+                    android:textSize="20sp"
+                    android:id="@+id/textView3"
+                    android:layout_column="0"
+                    />
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spGenre"
+                    android:spinnerMode="dialog"
+                    android:textSize="20sp"
+                    android:layout_column="1"
+                    android:layout_centerVertical="true"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Robe"
+                    android:textSize="20sp"
+                    android:id="@+id/textView5"
+                    android:layout_column="0" />
+
+                <EditText
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/editTextRobe"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/textView5"
+                    android:layout_toRightOf="@+id/textView5"
+                    android:ems="10"
+                    android:textSize="20sp"
+                    android:inputType="textCapWords" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Race"
+                    android:textSize="20sp"
+                    android:id="@+id/textView6"
+                    android:layout_column="0" />
+
+                <EditText
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/editTextRace"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/textView5"
+                    android:layout_toRightOf="@+id/textView5"
+                    android:ems="10"
+                    android:textSize="20sp"
+                    android:inputType="textCapWords" />
+
+            </TableRow>
+
+        </TableLayout>
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Caractéristiques"
+            android:textSize="20sp"
+            android:id="@+id/textView8"
+            android:layout_below="@+id/tableLayout"
+            android:layout_column="0" />
+
+        <EditText
+            android:layout_marginTop="10dp"
+            android:id="@+id/editTextCaracteristique"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:textSize="20sp"
+            android:inputType="textMultiLine"
+            android:layout_below="@+id/textView8"
+            android:lines="2" />
+
+        <ImageView android:id="@+id/cheval_pic"
+            android:layout_width="400px"
+            android:layout_height="400px"
+            android:layout_below="@+id/editTextCaracteristique"
+            android:layout_centerHorizontal="true"/>
+
+
+    </RelativeLayout>
+
+</ScrollView>
