--- a/app/src/main/res/layout/activity_cavalier_main.xml
+++ b/app/src/main/res/layout/activity_cavalier_main.xml
@@ -1,89 +1,95 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:weightSum="1"
-        android:background="@drawable/cavalier_home">
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context=".MainActivity">
 
-        <Button
-            android:layout_marginTop="30px"
-            android:layout_width="400px"
-            android:layout_height="80px"
-            android:text="@string/title_home_add_cours"
-            android:id="@+id/button4"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:weightSum="1"
+            android:background="@drawable/cavalier_home">
 
-        <Button
-            android:layout_marginTop="30px"
-            android:layout_width="400px"
-            android:layout_height="80px"
-            android:text="@string/title_home_list_cours"
-            android:id="@+id/button5"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal" />
+            <Button
+                android:layout_marginTop="30px"
+                android:layout_width="400px"
+                android:layout_height="80px"
+                android:text="@string/title_home_add_cours"
+                android:id="@+id/button4"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal" />
 
-
-        <Button
-            android:layout_marginTop="30px"
-            android:layout_width="400px"
-            android:layout_height="80px"
-            android:text="@string/title_home_moniteurs"
-            android:id="@+id/button1"
-            android:textSize="25sp"
-            android:textColor="@android:color/holo_red_dark"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
-            android:layout_marginTop="30px"
-            android:layout_width="400px"
-            android:layout_height="80px"
-            android:text="@string/title_home_cavaliers"
-            android:id="@+id/button2"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
-            android:layout_marginTop="30px"
-            android:layout_width="400px"
-            android:layout_height="80px"
-            android:text="@string/title_home_montures"
-            android:id="@+id/button3"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal" />
+            <Button
+                android:layout_marginTop="30px"
+                android:layout_width="400px"
+                android:layout_height="80px"
+                android:text="@string/title_home_list_cours"
+                android:id="@+id/button5"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal" />
 
 
-        <Button
-            android:layout_marginTop="30px"
-            android:layout_width="400px"
-            android:layout_height="60px"
-            android:text="@string/action_init_data"
-            android:id="@+id/button0"
-            android:textSize="10sp"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal" />
+            <Button
+                android:layout_marginTop="30px"
+                android:layout_width="400px"
+                android:layout_height="80px"
+                android:text="@string/title_home_moniteurs"
+                android:id="@+id/button1"
+                android:textSize="25sp"
+                android:textColor="@android:color/holo_red_dark"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal" />
 
-    </LinearLayout>
+            <Button
+                android:layout_marginTop="30px"
+                android:layout_width="400px"
+                android:layout_height="80px"
+                android:text="@string/title_home_cavaliers"
+                android:id="@+id/button2"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal" />
 
-</RelativeLayout>
+            <Button
+                android:layout_marginTop="30px"
+                android:layout_width="400px"
+                android:layout_height="80px"
+                android:text="@string/title_home_montures"
+                android:id="@+id/button3"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal" />
+
+
+            <Button
+                android:layout_marginTop="30px"
+                android:layout_width="400px"
+                android:layout_height="60px"
+                android:text="@string/action_init_data"
+                android:id="@+id/button0"
+                android:textSize="10sp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+</ScrollView>
